# nrm

./: .gitignore  .gitmodules  pyproject.toml
nrm/dataset/: kinematics.py  loader.py
nrm/model/: __init__.py
paper_archive/rq1_validity/: table1.py
paper_archive/rq2_accuracy/: adapter.py  distances.py  kinematic_alignment.py  runtime.py  slices.py  transform_data.py  validate.py
paper_archive/rq3_design_optimisation/: baseline.py  ours.py  performance.py  plot.ipynb  runtime.py
