[project]
name = "neural-capability-maps"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.0",
    "tqdm>=4.66.5",
    "wandb>=0.25.1",
    "jaxtyping>=0.3.2",
    "optuna>=0.4.5",
    "beartype>=0.22.3",
    "zarr>=3.1.3",
    "kaleido>=1.1.0",
    "scipy>=1.17.0rc1",
    "eaik>=1.2.1",
    "tabulate>=0.9.0",
    "fasteners>=0.20",
    "jupyter>=1.1.1",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "scipy-stubs~=1.17.0rc2",
    "liegroups @ git+ssh://git@github.com/utiasSTARS/liegroups.git@generative_ik",
    "graphIK @ git+ssh://git@github.com/utiasSTARS/graphIK.git@generative_ik",
    "torch_geometric",
    "matplotlib",
    "jax[cuda12]",
    "optimistix",
    "optax"
]

[tool.ruff]
line-length = 120
ignore = ["F722"]
